# phishing-radar

./: .env.example  .gitignore  Dockerfile  Dockerfile.detector  Dockerfile.kestra  Makefile  README.md  docker-compose.yml  justfile  pyproject.toml
.dlt/: secrets.toml.example
.github/workflows/: batch-daily.yml  ci.yml  deploy.yml
.streamlit/: config.toml
batch/: common.py  ingest_cisa_kev.py  ingest_feodo.py  ingest_maxmind.py  ingest_mitre.py  ingest_spamhaus.py  ingest_threatfox.py  run_all.py
dashboard/: app.py  requirements.txt
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _schema.yml  mart_c2_active.sql  mart_c2_mitre_enriched.sql  mart_dashboard_brand_daily.sql  mart_dashboard_c2_by_country.sql  mart_dashboard_kev_monthly.sql  mart_dashboard_kev_vendors.sql  mart_dashboard_kpis.sql  mart_dashboard_suspicious_1h.sql  mart_dashboard_suspicious_5min.sql  mart_dashboard_suspicious_hourly.sql  mart_dashboard_top_issuers.sql  mart_issuer_volume_1min.sql  mart_kev_pulse.sql  mart_mitre_malware_catalog.sql  mart_pipeline_health.sql  mart_recent_suspicious.sql  mart_spamhaus_by_country.sql  mart_suspicious_certs_daily.sql  mart_top_impersonated_brands.sql
dbt/models/staging/: _sources.yml  stg_cert_stats.sql  stg_cisa_kev.sql  stg_feodo.sql  stg_geoip_city.sql  stg_geoip_country.sql  stg_mitre_software.sql  stg_mitre_techniques.sql  stg_pipeline_events.sql  stg_spamhaus.sql  stg_suspicious_certs.sql  stg_threatfox.sql
dbt/tests/: assert_pipeline_health_invariants.sql  assert_pipeline_healthy.sql  ioc_has_valid_ip_or_cidr.sql  kev_dates_sensible.sql
deploy/certstream/: fly.toml
deploy/detector/: fly.toml
deploy/kestra/: fly.toml
deploy/producer/: fly.toml
deploy/sink/: fly.toml
docs/: detection_alternatives.md  memory_profile.md
kestra/flows/: batch_pipeline.yml
streaming/: local_runner.py
streaming/flink/: brands.py  brands.yaml  detectors.py  phishing_detector.py  python_detector.py
streaming/observability/: pipeline_monitor.py
streaming/producer/: certstream_producer.py
streaming/sink/: _common.py  kafka_to_bq.py  kafka_to_md.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_batch.py  test_detectors.py
